syntax = "proto3";

package peermsg.pb;

message Message {

  string id = 1;

  bytes fromPeerId = 2;

  bytes toPeerId = 3;

  string msgType = 4;

  string mimeType = 5;

  bytes payload = 6;

  int64 timestamp = 7;

  uint64 lamportime = 8;

  bytes signature = 10;
}